# Django-Polls

./: MANIFEST.in  README.md  pyproject.toml  settings.yaml
project/apps/django_polls/: admin.py  models.py  views.py
project/apps/polls/: models.py  views.py
project/server/: settings.py  urls.py
project/static/css/: style.css
project/templates/: layout.html
project/templates/polls/: detail.html  index.html  results.html
tests/polls/: test_model.py
