[tool.poetry]
name = "django-polls"
version = "0.1.0"
description = ""
authors = ["Milton-Luis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
dynaconf = "^3.2.6"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
