[tool.poetry]
name = "django-polls"
version = "0.1.0"
description = ""
authors = ["Milton-Luis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
dynaconf = "^3.2.6"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.4.6"
setuptools = "^75.6.0"
build = "^1.2.2.post1"
pip = "^24.3.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core", "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.1"
dependencies = [
"django>=5.1.2", # Replace "X.Y" as appropriate
]
description = "A Django app to conduct web-based polls."
readme = "README.rst"
requires-python = ">= 3.10"
classifiers = [
"Environment :: Web Environment",
"Framework :: Django",
"Framework :: Django :: ^5.1.2", # Replace "X.Y" as appropriate
"Intended Audience :: Developers",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Topic :: Internet :: WWW/HTTP",
"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
[project.urls]
Homepage = "https://www.example.com/"